syntax = "proto3";
option go_package = "/grpcT;grpcT";
package grpcT;
service GrpcService {
  rpc Fun(RequestData) returns (ResponseData){}
}
message RequestData {
  string repT = 1;
  int64 r = 2;
}

message ResponseData {
  string resT = 1;
  int64 code = 2;
}
